`select`-mode can only have one tag, so replaced block `margin` (up/down) with padding so the tag will occuy the whole space of the container and have a larger clicking area

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -578,6 +578,8 @@
             flex: 1;
             max-width: none;
             margin-inline-end: 2em;
+            margin-block: 0;
+            padding-block: $tagMargin;
             cursor: text;
 
             div{
