--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -155,6 +155,14 @@
         filter: saturate(0);
         opacity: .5;
         pointer-events: none;
+
+        &#{$self}--empty{
+            > #{$self}__input{
+                &::before{
+                    position: relative;
+                }
+            }
+        }
     }
 
     // Global "read-only" mode (no input button)
@@ -163,7 +171,7 @@
             pointer-events: none;
         }
 
-        &:not(#{$self}--mix):not(#{$self}--select){
+        &:not(#{$self}--mix):not(#{$self}--select):not(#{$self}--empty){
             cursor: default;
             > #{$self}__input{
                 visibility: hidden;
@@ -180,7 +188,6 @@
         }
 
         #{ $self }__tag__removeBtn{ display:none; }
-
     }
 
     &--loading{
