CSS: Correct capitalization of `translateX`

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -85,7 +85,7 @@
         }
         @else {
             opacity: 0;
-            transform: translatex(6px);
+            transform: translateX(6px);
         }
     }
 
